--- a/AlgoritmicaDotNet/AlgoritmicaDotNet/AlgoritmicaDotNet.csproj
+++ b/AlgoritmicaDotNet/AlgoritmicaDotNet/AlgoritmicaDotNet.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DP\MaxSubArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recursive\HanoiTower.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
