--- a/AlgoritmicaDotNet/AlgoritmicaDotNet/AlgoritmicaDotNet.csproj
+++ b/AlgoritmicaDotNet/AlgoritmicaDotNet/AlgoritmicaDotNet.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Array\ArrayQuestions.cs" />
+    <Compile Include="Backtracking\Subsets.cs" />
     <Compile Include="DP\MaxSubArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
